[package]
name = "ruspiro-sdk"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.1.0" # remember to update html_root_url
description = "Combine the RusPiRo crates into a SDK library for convinient usage, providing feature gates for the individual parts."
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-sdk/tree/v0.1.0"
documentation = "https://docs.rs/ruspiro-sdk/0.1.0"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "sdk"]
categories = ["no-std", "embedded"]
edition = "2018"

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-sdk", branch = "master" }
is-it-maintained-issue-resolution = { repository = "RusPiRo/ruspiro-sdk" }
is-it-maintained-open-issues = { repository = "RusPiRo/ruspiro-sdk" }
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
ruspiro-boot = { version = "0.1.0", features = ["with_panic", "with_exception"], optional = true }
ruspiro-register = "0.1.1"
ruspiro-gpio = "0.1.0"
ruspiro-mailbox = "0.1.0"
ruspiro-timer = "0.1.0"
ruspiro-interrupt = "0.1.0"
ruspiro-allocator = { version = "0.1.1", optional = true }
ruspiro-console = { version = "0.1.1", optional = true}
ruspiro-uart = { version = "0.1.0", optional = true }
ruspiro-i2c = { version = "0.1.0", optional = true }

[features]
default = ["with_boot", "with_allocator"]
ruspiro_pi3 = [
    "ruspiro-mailbox/ruspiro_pi3",
    "ruspiro-timer/ruspiro_pi3",
    "ruspiro-interrupt/ruspiro_pi3",
    "ruspiro-uart/ruspiro_pi3"
]
with_boot = ["ruspiro-boot"]
with_allocator = ["ruspiro-allocator"]
with_console = ["ruspiro-console"]
with_uart = ["ruspiro-uart", "with_console"]
with_i2c = ["ruspiro-i2c"]
