[package]
name = "ruspiro-sdk"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.3.0" # remember to update html_root_url
description = """
Combine the RusPiRo crates into a SDK library for convinient usage, providing feature gates for the individual parts.
"""
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-sdk"
documentation = "https://docs.rs/ruspiro-sdk/0.3.0"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "sdk"]
categories = ["no-std", "embedded"]
edition = "2018"

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-sdk", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
ruspiro-boot = { path = "../boot", version = "0.3", features = ["with_panic", "with_exception"], optional = true }
ruspiro-lock = { path = "../lock", version = "0.3" }
ruspiro-singleton = { path = "../singleton", version = "0.3" }
ruspiro-register = { path = "../register", version = "0.3" }
ruspiro-gpio = { path = "../gpio", version = "0.3" }
ruspiro-mailbox = { path = "../mailbox", version = "0.3" }
ruspiro-timer = { path = "../timer", version = "0.3" }
ruspiro-cache = { path = "../cache", version = "0.3" }
ruspiro-interrupt = { path = "../interrupt", version = "0.3" }
ruspiro-allocator = { path = "../allocator", version = "0.3", optional = true }
ruspiro-console = { path = "../console", version = "0.3", optional = true}
ruspiro-uart = { path = "../uart", version = "0.3", optional = true }
ruspiro-i2c = { path = "../i2c", version = "0.3", optional = true }

[features]
default = ["ruspiro_pi3", "with_boot", "with_allocator", "with_uart"]
ruspiro_pi3 = [
    "ruspiro-boot/ruspiro_pi3",
    "ruspiro-mailbox/ruspiro_pi3",
    "ruspiro-timer/ruspiro_pi3",
    "ruspiro-interrupt/ruspiro_pi3",
    "ruspiro-uart/ruspiro_pi3",
    "ruspiro-cache/ruspiro_pi3",
    "ruspiro-gpio/ruspiro_pi3",
    "ruspiro-i2c/ruspiro_pi3",
    "ruspiro-lock/ruspiro_pi3",
    "ruspiro-uart/ruspiro_pi3"
]
with_boot = ["ruspiro-boot"]
with_allocator = ["ruspiro-allocator"]
with_console = ["ruspiro-console"]
with_uart = ["ruspiro-uart", "with_console"]
with_i2c = ["ruspiro-i2c"]

[package.metadata.docs.rs]
all-features = true
default-target = "armv7-unknown-linux-gnueabihf"
rustc-args = [
    "-C target-cpu=cortex-a53",
    "-C target-feature=+a53,+fp-armv8,+v8,+vfp3,+d16,+thumb2,+neon"
]
